# Auto-Filmer

./: README.md
src/auto-filmer/mapping/: CMakeLists.txt
src/auto-filmer/mapping/config/: camera.yaml  rviz_sim.rviz
src/auto-filmer/mapping/include/mapping/: mapping.h
src/auto-filmer/mapping/launch/: mapping.launch
src/auto-filmer/mapping/src/: mapping.cc  mapping_nodelet.cpp
src/auto-filmer/planning/planning/: CMakeLists.txt  package.xml
src/auto-filmer/planning/planning/include/env/: env.hpp
src/auto-filmer/planning/planning/include/path/: path.hpp
src/auto-filmer/planning/planning/include/prediction/: prediction.hpp
src/auto-filmer/planning/planning/include/shot/: shot.hpp
src/auto-filmer/planning/planning/include/visualization/: visualization.hpp
src/auto-filmer/planning/planning/launch/: af_tracking.launch  run_in_sim.launch
src/auto-filmer/planning/planning/src/: planning_nodelet.cpp  traj_server.cpp
src/auto-filmer/planning/traj_opt/: CMakeLists.txt  package.xml
src/auto-filmer/planning/traj_opt/include/traj_opt/: flatness.hpp  lbfgs.hpp  minco.hpp  traj_opt.h  trajectory.hpp
src/auto-filmer/planning/traj_opt/src/: traj_opt.cc
src/gui/: CMakeLists.txt  package.xml
src/gui/launch/: gui.launch
src/utils/quadrotor_msgs/: CMakeLists.txt  package.xml
src/utils/quadrotor_msgs/msg/: GimbalCmd.msg  GimbalState.msg  OptDebug.msg  PolyTraj.msg  ReplanState.msg  ShotParams.msg
src/utils/uav_simulator/fake_drone/: CMakeLists.txt  package.xml
src/utils/uav_simulator/fake_drone/src/: fake_gimbal.cpp
src/utils/uav_simulator/local_sensing/: CMakeLists.txt
src/utils/uav_simulator/local_sensing/params/: camera.yaml
src/utils/uav_simulator/local_sensing/src/: pcl_render_node.cpp  shot.hpp
src/utils/uav_simulator/map_generator/src/: map_generator_easy.py
src/utils/uav_simulator/odom_vis/odom_visualization/src/: odom_visualization.cpp
src/utils/uav_simulator/so3_control/: CMakeLists.txt
src/utils/uav_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
src/utils/uav_simulator/uav_simulator/config/: mockamap.yaml
src/utils/uav_simulator/uav_simulator/launch/: uav_simulator.launch
